# agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  plan.md
.claude/: CLAUDE.md
.claude/agents/: backend.md  frontend.md  git.md  review.md
.github/workflows/: ci.yml
defaults/: CLAUDE.md
defaults/.claude/: settings.json
design/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
design/src/: App.vue  Workbench.vue  fixtures.ts  layout.ts  main.ts  router.ts  style.css  theme.ts
design/templates/: App.html  INDEX.md  style.css
docs/: application-integration.md  architecture.md
docs/project-bootstrap/: .gitignore  CLAUDE.md  README.md  allowed_operations.json
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.vue  layout.ts  main.ts  notifications.ts  pwa.ts  router.ts  style.css  theme.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20260415_000001_create_tasks.rs  m20260415_000002_create_task_results.rs  m20260601_000003_create_projects.rs  m20260601_000004_create_project_branches.rs  m20260601_000005_extend_tasks.rs  m20260601_000006_create_auth_requests.rs  m20260601_000007_create_git_services.rs  m20260601_000008_add_git_service_to_tasks.rs  m20260601_000009_add_task_session_id.rs  m20260601_000010_add_task_pid.rs  m20260601_000011_add_auth_request_metadata.rs  (+17 more)
src/: config.rs  lib.rs  main.rs  queues.rs  spa.rs  views.rs
src/agent/: mod.rs  (+1 more)
systemd/: agent.service  gitlab-claude-agent.service
templates/: base.html  task_detail.html  tasks.html
tests/: model_alias_unique.rs  service_models_tx.rs  task_state.rs
(+221 files in other folders)
